# convolutional-codes

./: .gitignore  CMakeLists.txt  Readme.md
AWGN-channel/: main.c
binary-symmetric-channel/: fano-decoder.c  main.c  stack-decoder.c
common/: codebook.c  constellations.c  demapper.c  encoder.c  gaussian.c  hard-demapper.c  mapper.c
common/include/: code.h  codebook.h  constellations.h  demapper.h  encoder.h  gaussian.h  mapper.h
hard-decision/: fano-decoder.c  main.c  sequential-decoder.c  stack-decoder.c  viterbi-decoder.c
hard-decision/include/: decoder.h
matlab/: hard_decision_viterbi_comparison.m  soft_decision_viterbi_comparison.m
results/: awgn_channel.m  hard_decision_viterbi_comparison.m
soft-decision/: fano-decoder.c  main.c  stack-decoder.c  viterbi-decoder.c
soft-decision/include/: decoder.h
uncoded/: main.c
